# valkyrie.hs

./: .editorconfig  .gitignore  Cargo.toml  Directory.Build.props  Readme.md  Valkyrie.sln  stylecop.json
.github/workflows/: dotnet.yml  rust.yml
projects/Valkyrie.Core/: Valkyrie.Core.csproj  ValkyrieLanguage.cs
projects/Valkyrie.Core/Ast/: Node.cs
projects/Valkyrie.Core/Lexer/: Token.cs  TokenType.cs  ValkyrieLexer.cs
projects/Valkyrie.Core/Parser/: ValkyrieParser.cs
projects/Valkyrie.Core/Tests/: ValkyrieLanguageTests.cs
projects/gg-core/: Cargo.toml
projects/gg-core/src/: errors.rs  lib.rs
projects/gg-core/src/shapes/: mod.rs
projects/gg-core/src/traits/: mod.rs
projects/gg-core/src/traits/to_svg/: mod.rs
projects/gg-core/src/units/: mod.rs
projects/gg-plot/: Cargo.toml
projects/gg-plot/src/: errors.rs  lib.rs
projects/gg-plot/src/axis/: mod.rs
projects/gg-plot/src/charts/: mod.rs
projects/gg-plot/src/charts/bar_chart/: mod.rs
projects/gg-plot/src/charts/data/: mod.rs
projects/gg-plot/src/property/: mod.rs
projects/gg-plot/src/theme/: mod.rs
projects/gg-plot/tests/: main.rs
scripts/: format.ps1
