[package]
name = "ggplot-types"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dependencies.svg]
optional = true
version = "0.14.0"

[dependencies.serde]
optional = true
version = "1.0.195"
features = ["derive"]

[dev-dependencies]

[features]
default = ["svg"]

[package.metadata.docs.rs]
all-features = true
